# wagtailset

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/wagtailset/draftail_anchors/: __init__.py  apps.py  package-lock.json  package.json  rich_text.py  wagtail_hooks.py  webpack.config.js
src/wagtailset/draftail_anchors/static/wagtailsetdraftailanchors/js/: wagtailset-draftail-anchor.js
src/wagtailset/draftail_anchors/static_src/wagtailsetdraftailanchors/js/: wagtailset_draftail_anchor.js  wagtailset_draftail_links.js
